<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.NotificationsFragment"
    android:background="@color/background_theme"
    >

    <TextView
        android:id="@+id/txtWelcomeAccountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/welcome_label_margin_top"
        android:fontFamily="@font/trenda_semibold"
        android:letterSpacing="@dimen/account_screen_labels_letter_spacing"
        android:text="@string/account_screen_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome_label_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/trenda_semibold"
        android:letterSpacing="@dimen/account_screen_labels_letter_spacing"
        android:text="@string/account_screen_subheading"
        android:textColor="@color/white"
        android:textSize="@dimen/subheading_label_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcomeAccountLabel" />

    <TextView
        android:id="@+id/txtUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_label_margin_top"
        android:fontFamily="@font/trenda_semibold"
        android:letterSpacing="@dimen/account_screen_labels_letter_spacing"
        android:text="@string/username_input_hint"
        android:textColor="@color/account_screen_label"
        android:textSize="@dimen/input_field_label_size"
        app:layout_constraintStart_toStartOf="@+id/txtSubHeading"
        app:layout_constraintTop_toBottomOf="@+id/txtSubHeading" />


    <EditText
        android:id="@+id/etxtAccountUsername"
        android:layout_width="@dimen/input_field_width"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginTop="5dp"
        android:autofillHints="username"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:fontFamily="@font/trenda_regular"
        android:inputType="textPersonName"
        android:padding="@dimen/input_field_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/input_hint_size"
        app:layout_constraintStart_toStartOf="@+id/txtUsernameLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameLabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/trenda_semibold"
        android:letterSpacing="@dimen/account_screen_labels_letter_spacing"
        android:text="@string/email_input_hint"
        android:textColor="@color/account_screen_label"
        android:textSize="@dimen/input_field_label_size"
        app:layout_constraintStart_toStartOf="@+id/etxtAccountUsername"
        app:layout_constraintTop_toBottomOf="@+id/etxtAccountUsername" />

    <EditText
        android:id="@+id/etxtAccountEmail"
        android:layout_width="@dimen/input_field_width"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginTop="5dp"
        android:autofillHints="username"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:fontFamily="@font/trenda_regular"
        android:inputType="textPersonName"
        android:padding="@dimen/input_field_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/input_hint_size"
        app:layout_constraintStart_toStartOf="@+id/txtEmailLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailLabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <android.widget.Button
        android:id="@+id/btnTicketHistory"
        android:layout_width="@dimen/ticket_button_width"
        android:layout_height="@dimen/ticket_button_height"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_radius"
        android:drawableLeft="@drawable/ticket_icon"
        android:drawableRight="@drawable/chevron_smaller"
        android:fontFamily="@font/trenda_light"
        android:padding="@dimen/ticket_button_padding"
        android:text="@string/ticket_button_text"
        android:textSize="@dimen/ticket_button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtAccountEmail" />

    <android.widget.Button
        android:id="@+id/btnLogOut"
        android:layout_width="@dimen/account_screen_logout_button_width"
        android:layout_height="@dimen/account_screen_logout_button_height"
        android:layout_marginTop="@dimen/account_screen_logout_button_margin_top"
        android:background="@drawable/logout_button_radius"
        android:fontFamily="@font/trenda_bold"
        android:letterSpacing=".1"
        android:text="@string/logout_button_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnTicketHistory"
        app:layout_constraintStart_toStartOf="@+id/btnTicketHistory"
        app:layout_constraintTop_toBottomOf="@+id/btnTicketHistory"
        app:layout_constraintVertical_bias="0.18" />

    <ImageButton
        android:id="@+id/editIcon1"
        android:layout_width="@dimen/account_screen_edit_icon_width"
        android:layout_height="@dimen/account_screen_edit_icon_height"
        android:src="@drawable/edit_icon"
        android:background="@color/background_theme"
        app:layout_constraintBottom_toBottomOf="@+id/etxtAccountUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etxtAccountUsername"
        app:layout_constraintTop_toTopOf="@+id/etxtAccountUsername"
        />

    <ImageButton
        android:id="@+id/editIcon2"
        android:layout_width="@dimen/account_screen_edit_icon_width"
        android:layout_height="@dimen/account_screen_edit_icon_height"
        android:src="@drawable/edit_icon"
        android:background="@color/background_theme"
        app:layout_constraintBottom_toBottomOf="@+id/etxtAccountEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etxtAccountEmail"
        app:layout_constraintTop_toTopOf="@+id/etxtAccountEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>