<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_theme"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cinematrum_logo"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/etxtUsername"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="username"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:fontFamily="@font/trenda_regular"
        android:hint="@string/username_input_hint"
        android:inputType="textPersonName"
        android:padding="@dimen/input_field_padding"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etxtEmailSignIn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:fontFamily="@font/trenda_regular"
        android:hint="@string/email_input_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/input_field_padding"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/etxtUsername" />

    <EditText
        android:id="@+id/etxtPasswordSignIn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:background="@drawable/input_radius"
        android:ems="10"
        android:fontFamily="@font/trenda_regular"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:padding="@dimen/input_field_padding"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/etxtEmailSignIn" />

    <android.widget.Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_radius"
        android:fontFamily="@font/moon_light"
        android:letterSpacing="@dimen/button_letter_spacing"
        android:text="@string/button_signup"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/etxtPasswordSignIn" />

    <TextView
        android:id="@+id/txtUsernameWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trenda_semibold"
        android:text="Textview"
        android:textSize="10sp"
        android:textColor="@color/warning_message"
        app:layout_constraintStart_toStartOf="@+id/etxtUsername"
        app:layout_constraintTop_toBottomOf="@+id/etxtUsername" />

    <TextView
        android:id="@+id/txtEmailWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trenda_semibold"
        android:text="TextView"
        android:textSize="10sp"
        android:textColor="@color/warning_message"
        app:layout_constraintStart_toStartOf="@+id/etxtEmailSignIn"
        app:layout_constraintTop_toBottomOf="@+id/etxtEmailSignIn" />

    <TextView
        android:id="@+id/txtPasswordWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trenda_semibold"
        android:text="TextView"
        android:textSize="10sp"
        android:textColor="@color/warning_message"
        app:layout_constraintStart_toStartOf="@+id/etxtPasswordSignIn"
        app:layout_constraintTop_toBottomOf="@+id/etxtPasswordSignIn" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>